add graphics::{Window, ImageRgb8}, collections::List
Rather pointless at this early stage, let's just merge this branch and
work on something else.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,9 @@ project(Onder)
 set(CMAKE_CXX_STANDARD 23)
 
 option(ENABLE_EXAMPLES   "Enable examples." NO)
+option(PIXELTOASTER_NO_STL "Disable use of STL library." YES)
 
+include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${PROJECT_SOURCE_DIR}/thirdparty/pixeltoaster)
 add_subdirectory(${PROJECT_SOURCE_DIR}/thirdparty/pixeltoaster)
 
